--- a/wave.html
+++ b/wave.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>wave</title>
   <link rel="stylesheet" href="wave.css">
+  <!-- <link rel="stylesheet" href="/css/main.css"> -->
+  <!-- <link rel="stylesheet" href="css/main.css.map"> -->
 </head>
 
 <body>
